--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 			<label class="file-browser">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 		</div>
 		<div class="col-md-4">
 			<label class="file-browser green">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
@@ -43,7 +43,7 @@
 			<label class="file-browser red">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
@@ -68,14 +68,14 @@
 			<label class="file-browser blue">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 		</div>
 		<div class="col-md-4">
 			<label class="file-browser yellow">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
@@ -83,7 +83,7 @@
 			<label class="file-browser orange">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
@@ -109,14 +109,14 @@
 			<label class="file-browser purple">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 		</div>
 		<div class="col-md-4">
 			<label class="file-browser lime">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
@@ -124,7 +124,7 @@
 			<label class="file-browser brown">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
-				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="file_browser(this);">
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
 
 		</div>
