Added Copyright and colors

--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
 	<div class="row">
 		<div class="col-md-4">
 			<h3>Default</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Green</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Red</h3>
-		</div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4">
 			<label class="file-browser">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
@@ -31,39 +20,29 @@
 			</label>
 		</div>
 		<div class="col-md-4">
+			<h3>.green</h3>
 			<label class="file-browser green">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
 		<div class="col-md-4">
+			<h3>.red</h3>
 			<label class="file-browser red">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
 
 	</div>
+	
 
 
 	<div class="row">
 		<div class="col-md-4">
-			<h3>Blue</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Yellow</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Orange</h3>
-		</div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4">
+			<h3>.blue</h3>
 			<label class="file-browser blue">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
@@ -71,40 +50,30 @@
 			</label>
 		</div>
 		<div class="col-md-4">
+			<h3>.yellow</h3>
 			<label class="file-browser yellow">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
 		<div class="col-md-4">
+			<h3>.orange</h3>
 			<label class="file-browser orange">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
 
 	</div>
+	
 
 
 
 	<div class="row">
 		<div class="col-md-4">
-			<h3>Purple</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Lime</h3>
-		</div>
-		<div class="col-md-4">
-			<h3>Brown</h3>
-		</div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4">
+			<h3>.purple</h3>
 			<label class="file-browser purple">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
@@ -112,21 +81,51 @@
 			</label>
 		</div>
 		<div class="col-md-4">
+			<h3>.lime</h3>
 			<label class="file-browser lime">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
 		<div class="col-md-4">
+			<h3>.brown</h3>
 			<label class="file-browser brown">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
 			</label>
-
 		</div>
+
+	</div>
+
+	
+	<div class="row">
+		<div class="col-md-4">
+			<h3>.black</h3>
+			<label class="file-browser black">
+				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
+				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
+			</label>
+		</div>
+		<div class="col-md-4">
+			<h3>.black</h3>
+			<label class="file-browser black">
+				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
+				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
+			</label>
+		</div>
+		<div class="col-md-4">
+			<h3>.gray</h3>
+			<label class="file-browser gray">
+				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
+				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
+				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
+			</label>
+		</div>
+		
 
 	</div>
 
