--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 			</label>
 		</div>
 		<div class="col-md-4">
-			<h3>.black</h3>
-			<label class="file-browser black">
+			<h3>.black2</h3>
+			<label class="file-browser black2">
 				<span class="btn file-upload"><i class="fa fa-folder-open"></i> Browse</span>
 				<span class="file_name"><span class="files_text">Selected files: </span><span class="files_count">0</span></span>
 				<input type="file" class="hidden file" multiple name="userfiles[]" onchange="uploadFormBrowser(this);">
